kubernetes/foodquest-api-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodquest-api
  namespace: foodquest-prod
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v1
  namespace: foodquest-prod
  labels:
    app: api
    version: v1
spec:
  replicas: 15
  selector:
    matchLabels:
      app: api
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
        version: v1
    spec:
      serviceAccountName: foodquest-api
      containers:
        - name: api
          image: 061044801495.dkr.ecr.us-west-2.amazonaws.com/foodquest-api:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
