kubernetes/foodquest-api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-foodquest-cc-gateway
  namespace: foodquest-prod
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: api-foodquest-cc-tls
      hosts:
        - "api.foodquest.cc"
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "api.foodquest.cc"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-foodquest-cc
  namespace: foodquest-prod
spec:
  hosts:
    - "api.foodquest.cc"
  gateways:
    - api-foodquest-cc-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: foodquest-api
